--- a/cantact.html
+++ b/cantact.html
@@ -23,7 +23,7 @@
     <h2>NOTE!</h2>
     <p>fill the form correctly</p>
     <hr />
-    <form action="mainpage.html">
+    <form action="index.html">
       <label>name:</label>
       <input type="text" name="text" id="text" /><br />
       <label>E-mail:</label>
